--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start" : "node index",
-    "dev" : "nodemon index"
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "client": "npm start --prefix ../client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.5.9",
+    "archiver": "^5.3.1",
     "axios": "^0.27.2",
+    "concurrently": "^7.2.1",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
+    "kill-port": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
